@@ -10,7 +10,7 @@
 
 #include "hml/tim2.h"
 
-#ifdef __CONF_COMPILE_TIM2
+#ifdef COMPILE_TIM2
 
 /*****************************************************************************/
 /** 
